--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,8 +19,33 @@ jobs:
           key: v1-dependencies-{{ checksum "package.json" }}
       - run: npm test
 
+  deploy:
+    machine:
+      enabled: true
+
+    working_directory: ~/client
+
+    steps:
+      - add_ssh_keys:
+          fingerprints:
+            - "76:89:eb:05:68:56:17:42:de:e9:c0:c9:93:f9:aa:e7"
+      - checkout
+      - run:
+          name: Push Master to Production
+          command: |
+            git push https://github.com/EavanK/scheduler.git master:production
+
 workflows:
   version: 2
-  test:
+  test_and_deploy:
     jobs:
-      - build
+      - build:
+          filters:
+            branches:
+              ignore: production
+      - deploy:
+          filters:
+            branches:
+              ignore: production
+          requires:
+            - build
